@@ -18,35 +18,36 @@ are permitted provided that the following conditions are met:
    to endorse or promote products derived from this software without specific
    prior written permission.
 
-$Id: ATCTMigrator.py,v 1.11 2004/07/13 13:12:55 dreamcatcher Exp $
+$Id: ATCTMigrator.py,v 1.12 2004/08/09 07:44:09 tiran Exp $
 """
 
 from common import *
-from Walker import CatalogWalker, RecursiveWalker
+from Walker import CatalogWalker, CatalogWalkerWithLevel, StopWalking
 from Migrator import CMFItemMigrator, CMFFolderMigrator
 from Products.CMFCore.utils import getToolByName
 from Acquisition import aq_parent
 
 from Products.ATContentTypes.types import ATDocument, ATEvent, \
     ATFavorite, ATFile, ATFolder, ATImage, ATLink, ATNewsItem
+from Products.ATContentTypes.Extensions.toolbox import _fixLargePloneFolder
 
-def isPloneFolder(obj, ob=None):
-    if ob:
-        # called as instance method
-        obj = ob
-    # We can't use the type information because they are FU for the members folder!
-    mtobj = getattr(obj, 'meta_type', None)
-    mtp   = getattr(aq_parent(obj), 'meta_type', None)
-    return mtobj == 'Plone Folder' and mtp != 'Plone Folder'
-
-def isLargePloneFolder(obj, ob=None):
-    if ob:
-        # called as instance method
-        obj = ob
-    # We can't use the type information because they are FU for the members folder!
-    mtobj = getattr(obj, 'meta_type', None)
-    mtp   = getattr(aq_parent(obj), 'meta_type', None)
-    return mtobj == 'Large Plone Folder' and mtp != 'Large Plone Folder'
+##def isPloneFolder(obj, ob=None):
+##    if ob:
+##        # called as instance method
+##        obj = ob
+##    # We can't use the type information because they are FU for the members folder!
+##    mtobj = getattr(obj, 'meta_type', None)
+##    mtp   = getattr(aq_parent(obj), 'meta_type', None)
+##    return mtobj == 'Plone Folder' and mtp != 'Plone Folder'
+##
+##def isLargePloneFolder(obj, ob=None):
+##    if ob:
+##        # called as instance method
+##        obj = ob
+##    # We can't use the type information because they are FU for the members folder!
+##    mtobj = getattr(obj, 'meta_type', None)
+##    mtp   = getattr(aq_parent(obj), 'meta_type', None)
+##    return mtobj == 'Large Plone Folder' and mtp != 'Large Plone Folder'
 
 
 class DocumentMigrator(CMFItemMigrator):
@@ -144,27 +145,36 @@ migrators = (DocumentMigrator, EventMigrator, FavoriteMigrator, FileMigrator,
              ImageMigrator, LinkMigrator, NewsItemMigrator,
             )
 
-folderMigrators = ( (FolderMigrator,isPloneFolder), (LargeFolderMigrator,isLargePloneFolder)
-            )
+folderMigrators = ( FolderMigrator, LargeFolderMigrator)
 
 def migrateAll(portal):
+    # first fix Members folder
+    _fixLargePloneFolder(portal)
     catalog = getToolByName(portal, 'portal_catalog')
-    out = 'Migration: \n'
+    out = []
+    out.append('Migration: ')
     for migrator in migrators:
-        out+='\n\n*** Migrating %s to %s ***\n' % (migrator.fromType, migrator.toType)
+        out.append('\n\n*** Migrating %s to %s ***\n' % (migrator.fromType, migrator.toType))
         w = CatalogWalker(migrator, catalog)
-        out+= w.go()
-    for migrator, checkMethod in folderMigrators:
-        out+='\n\n*** Migrating %s to %s ***\n' % (migrator.fromType, migrator.toType)
+        out.append(w.go())
+    for migrator in folderMigrators:
+        out.append('\n\n*** Migrating %s to %s ***\n' % (migrator.fromType, migrator.toType))
+        depth=2
         while 1:
             # loop around until we got 'em all :]
-            w = RecursiveWalker(migrator, portal, checkMethod)
-            o=w.go()
-            out+=o
-            if not o.strip():
+            w = CatalogWalkerWithLevel(migrator, catalog, depth)
+            try:
+                o=w.go()
+            except StopWalking:
+                depth=2
+                out.append(w.getOutput())
                 break
+            else:
+                out.append(o)
+                depth+=1
+
     wf = getToolByName(catalog, 'portal_workflow')
     LOG('starting wf migration')
     count = wf.updateRoleMappings()
-    out+='\n\n\n*** Workflow: %d object(s) updated. ***\n' % count
-    return out
+    out.append('\n\n*** Workflow: %d object(s) updated. ***\n' % count)
+    return '\n'.join(out)
